--- a/css/style.less
+++ b/css/style.less
@@ -36,33 +36,8 @@
 ---------- colors  ----------
 ----------------------------*/
 
-@color-txt: #111;
-@color-txt2: #5C5C5C;
-@color-back: #fff;
-@color-back2: #FFE9D1;
-@color-back3: #F6E7D6;
-@color-back4: rgba(0,0,0,.05);
 
-@color-accent: #E75200;
-@color-accent2: #DD640B;
-
-@color-btn: @color-accent;
-
-@color-link: #1D76A8;
-@color-link-hover: @color-accent2;
-
-@color-link2: @color-accent2; 
-
-
-@color-border: rgba(0,0,0,.15);
-@color-border-w: rgba(255,255,255,.3);
-@grey: #777;
-@grey2: #eee;
-
-@color-footer: @color-back2;
-@color-hidden: #eee;
-
-
+ 
 /*---------------------------
 ---------- imports ----------
 ----------------------------*/
@@ -74,7 +49,7 @@
 @import 'mixins-attributes.less'; // Замена свойств с параметрами, избавление от вендорных префиксов 
 
 @import 'project.less'; // Стили для текущего проекта
-@import 'bx-slider.less'; // Стилия для слайдера
+// @import 'bx-slider.less'; // Стилия для слайдера
 /*включаем только для стандартного шаблона магазинов*/
 /*@import 'shop.less';*/
 /*------------------------------*/
