--- a/css/mixins-attributes.less
+++ b/css/mixins-attributes.less
@@ -103,13 +103,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1', end
 		 -o-transform: rotate(@degree); /* Opera */
 			transform: rotate(@degree); /* Opera */
 }
+.origin(@left: 50%; @top: 50%) {
 
-.scale(@scale: 0.95) {							
-	-webkit-transform: @scale(@scale);
-	-moz-transform: @scale(@scale);
-	-ms-transform: @scale(@scale);
-	-o-transform: @scale(@scale);
-	transform: @scale(@scale);
+	-webkit-transform-origin:@left @top; /* Safari and Chrome */		
+	-moz-transform-origin:@left @top; 
+	-ms-transform-origin:@left @top; /* IE 9 */
+	transform-origin:@left @top;
+}
+.scale(@scale: 0.95) {					
+	-webkit-transform: scale(@scale);
+	-moz-transform: scale(@scale);
+	-ms-transform: scale(@scale);
+	-o-transform: scale(@scale);
+	transform: scale(@scale);
 }
 .gradi2(@c1,@c2){
 	background: @c1;
