--- a/css/style-base.less
+++ b/css/style-base.less
@@ -11,7 +11,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, nav, sectio
 	display: block;
 }
 body{
-	overflow-x: hidden;
 	background: @color-back;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -146,6 +145,8 @@ textarea{
 		height: @pad*10;
 	}
 }
+
+
 //    /$$$$$$                                      /$$     /$$       /$$                    
 //   /$$__  $$                                    | $$    | $$      |__/                    
 //  | $$  \__/  /$$$$$$  /$$$$$$/$$$$   /$$$$$$  /$$$$$$  | $$$$$$$  /$$ /$$$$$$$   /$$$$$$ 
@@ -273,6 +274,7 @@ header {
 				a {
 					box-shadow: none;
 					padding: 0;
+					.dotted;
 					display: inline-block;
 					margin: @pad/2;
 				}
@@ -349,8 +351,9 @@ a.full {
 	.radius(@pad*4);
 	margin: @pad/2 0;
 	padding: @pad @pad*2;
-	//background: darken(@color-link,0%);
-	color: @color-link;
+	background: darken(@color-link,0%);
+	color: @color-back;
+	text-decoration: none;
 	font-size: @small;
 }
 
