--- a/css/style-base.less
+++ b/css/style-base.less
@@ -3,6 +3,9 @@
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+.no-mobile {
+	display: none !important;
+}
 html{
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%
