Убирает такую вот кашу после компилинга: .newauthorhide table > tbody > tr > td, .newauthorhide table > thead > tr > td, .newauthorhide table > tbody > th > td, .newauthorhide table > thead > th > td
Ну и всякие странные вещи в таблицах, когда разработчики делают мешанину из tfoot, th, thead, tr, td

--- a/css/mixins.less
+++ b/css/mixins.less
@@ -221,13 +221,13 @@
 .tableToBlocks() {
   display: block;
   width: 100%;
-  > tbody, > thead {
+  > * {
     display: block;
     width: 100%;
-    > tr, > th {
+    > * {
       display: block;
       width: 100%;
-      > td {
+      > * {
         display: block;
         width: 100%;
       }
