Изменения: —Убрал @pad-list. Юзаем pad2 вместо этого —Заменил классы btn в шапке на link, чтобы не путать с кнопками обычными —Обновил/упростил стили для кнопок. У нас два кейса использования: 1. кнопки в html, которые делаем вручную. 2. Кнопочные стили, которые применяются для элементов сайта (чтобы сделать кнопкой ссылку/input и тд). Для случая 1 достаточно просто задать класс ‘.btn’ и дефолтная кнопка готова. Если нужна по всей ширине, добавляем класс ‘.full’. Если нужна плоская кнопка, даём класс ‘.btn-flat’. Для случая 2 используем готовые миксины: .btn-theme, .btn-white, -grey, -lime и тд. Если нужна плоская кнопка, юзаем ’.flat(#цвет-текста,#цвет-фона);’. Если нужна кастомная градиентная кнопка, юзаем ‘.btn-custom(#цвет-текста,#цвет-фона)’. —Прочие мелкие правки

--- a/css/mixins.less
+++ b/css/mixins.less
@@ -89,7 +89,7 @@
 	a {
 		display: block;
 		text-align: left;
-		padding: @pad-list;
+		padding: @pad2;
 		padding-right: @pad*3;
 		text-decoration: none;
 		position: relative;
@@ -238,7 +238,7 @@
 	>*>*>* {
 		padding: @pad/2;
 		.border(darken(@grey2,10%));
-		font-size: @pad-list;
+		font-size: @pad2;
 	}
 }
 .table-overflow-x() {
@@ -306,7 +306,7 @@
 }
 
 
-.group(@color: @color-border; @size: @pad-list){
+.group(@color: @color-border; @size: @pad2){
   .border(@color);
   .radius(@size);
   margin: @size 0;
