--- a/css/mixins-buttons.less
+++ b/css/mixins-buttons.less
@@ -1,69 +1,23 @@
-//   /$$$$$$$                               /$$ /$$              /$$         /$$                        
-//  | $$__  $$                             | $$| $/             | $$        | $$                        
-//  | $$  \ $$ /$$$$$$  /$$    /$$ /$$$$$$ | $$|_//$$$$$$$      | $$$$$$$  /$$$$$$   /$$$$$$$        /$$
-//  | $$$$$$$/|____  $$|  $$  /$$//$$__  $$| $$  /$$_____/      | $$__  $$|_  $$_/  | $$__  $$      |__/
-//  | $$____/  /$$$$$$$ \  $$/$$/| $$$$$$$$| $$ |  $$$$$$       | $$  \ $$  | $$    | $$  \ $$          
-//  | $$      /$$__  $$  \  $$$/ | $$_____/| $$  \____  $$      | $$  | $$  | $$ /$$| $$  | $$       /$$
-//  | $$     |  $$$$$$$   \  $/  |  $$$$$$$| $$  /$$$$$$$/      | $$$$$$$/  |  $$$$/| $$  | $$      |__/
-//  |__/      \_______/    \_/    \_______/|__/ |_______/       |_______/    \___/  |__/  |__/          
-//                                                                                                      
-//                                                                                                      
-//                                                                                                              
-
-.btn-flat(@color: @color-btn) {
-  margin: @pad2 0;
-  padding: @pad2/1.8 @pad2 @pad2/2.2;
-  .shadow(0 @pad/2 0 darken(@color,15%));
-  .radius(@bpad*3);
-  display: inline-block;
-  text-align: center;
-  text-decoration: none;
-  color: @color-back;
-  border: @bpad solid darken(@color,15%);
-  .gradient(lighten(@color,3%), darken(@color,3%));
-
-  &.active {
-    .shadow(0 @pad/8 0 darken(@color,15%));
-    top: @bpad*2;
-    position: relative;
-  }
+/*Готовые классы*/
+.btn{
+  .btn-theme();
 }
-
-.btn-skmrph(@color: @color-btn) {
-  display: inline-block;
-  text-align: center;
-  text-decoration: none;
+.btn-flat{
+  .button-style();
   color: @color-back;
-  border: @bpad solid darken(@color,10%);
-  box-shadow: 0 @bpad*2 @bpad*2 @color-border, inset 0 0 0 @bpad @color-border-w;
-  .radius(@pad);
-  .gradient(lighten(@color,10%), darken(@color,10%));
-  padding: @pad @pad2;
-  .bold;
-  &.active {
-    .gradient(lighten(@color,10%), darken(@color, 20%));
-    box-shadow: inset 0 0 @pad fadeout(@color-txt,40%);
-    //border-color: darken(@color,27%);
-  }
+  border: 1px solid rgba(0, 0, 0, .3);
+	background: @color-link;
 }
-
-.btn-simple(@color: @color-btn) {
-  display: inline-block;
-  text-align: center;
-  text-decoration: none;
-  color: @color-back;
-  border: @bpad solid darken(@color,7%);
-  padding: @pad/2 @pad;
-  color: lighten(@color,40%);
-  .gradient(lighten(@color,3%), darken(@color,3%));
-
-  &.active {
-    .gradient(darken(@color,15%), darken(@color,15%));
-    color: lighten(@color,10%);
-    border: @bpad solid darken(@color,25%);
-  }
+/*Параметры для кнопок*/
+.full{
+  width: 100%;
 }
-
+.flat(@text,@background){
+  .button-style();
+  border: 1px solid rgba(0, 0, 0, .3);
+  color: @text;
+	background: @background;
+}
 .btn-bar-skmrph(@color: @color-btn) {
   .gradient_tripple(@color);
   border-top: @bpad solid @color-border;
@@ -86,23 +40,6 @@
   }
 }
 
-.btn-bar-flat(@color: @color-back) {
-  .inliner;
-  border-bottom: @bpad solid darken(@color,15%);
-  li {
-    margin: @pad2/2 @pad2/4 0;
-    border: @bpad solid darken(@color,15%);
-    .radius(@pad2/2 @pad2/2 0 0);
-    background-color: darken(@color,5%);
-    &.active {
-      background-color: @color;
-      border-color: darken(@color,15%);
-      border-bottom-color: @color;
-      box-shadow: inset 0 -@bpad 0 @color;
-    }
-  }
-}
-
 .circle(@size: @pad*4, @color: @color-accent) {
   height: @size;
   line-height: @size;
@@ -118,13 +55,11 @@
   text-align: center;
   .radius(50%);
 }
-
 .label(@color: @color-accent) {
-  
   text-shadow: @bpad @bpad @bpad @color-back;
   .gradient(lighten(@color,15%),@color);
   display: inline-block;
-  padding: @pad/2 @pad-list;
+  padding: @pad/2 @pad2;
   position: relative;
   text-decoration: none;
   z-index: 9;
@@ -155,19 +90,7 @@
   }
 }
 
-//    /$$$$$$              /$$     /$$                        /$$                 
-//   /$$__  $$            | $$    |__/                       | $/                 
-//  | $$  \ $$  /$$$$$$  /$$$$$$   /$$  /$$$$$$  /$$$$$$/$$$$|_//$$$$$$$       /$$
-//  | $$$$$$$$ /$$__  $$|_  $$_/  | $$ /$$__  $$| $$_  $$_  $$ /$$_____/      |__/
-//  | $$__  $$| $$  \__/  | $$    | $$| $$  \ $$| $$ \ $$ \ $$|  $$$$$$           
-//  | $$  | $$| $$        | $$ /$$| $$| $$  | $$| $$ | $$ | $$ \____  $$       /$$
-//  | $$  | $$| $$        |  $$$$/| $$|  $$$$$$/| $$ | $$ | $$ /$$$$$$$/      |__/
-//  |__/  |__/|__/         \___/  |__/ \______/ |__/ |__/ |__/|_______/           
-//                                                                                
-//                                                                                
-//                                                                                                                                                 
-.button-style(){
-  
+.button-style(){  
   .unsel();
   .radius(@pad);
   display: inline-block;
@@ -178,14 +101,16 @@
   margin: @pad/2 0;
   
   padding: @pad*1.3;
-  /*min-width: 40px;*/
-  width: 100%;
   text-align: center;
   text-decoration: none;
   letter-spacing: 0px;
   font-weight: bold;
   
   cursor: pointer;
+}
+.btn-custom(@text,@back){
+  .button-style();
+  .secColor-custom (@text,@back);
 }
 .btn-theme(){
   .button-style();
@@ -245,18 +170,12 @@
   text-shadow: 0 @px 0 @clr;
   border: 1px solid rgba(0, 0, 0, .4);
   .ellipsis;
-  .rad(@pad);
+  .radius(@pad);
   .gradi3(darken(@bgc,-20%),@bgc,darken(@bgc,5%));
   
   box-shadow: 0px 3px 3px @box-shadow,
               inset 0px 1px 0px rgba(255,255,255,.6),
               inset 0px 0px 0px 1px rgba(255,255,255,.3);
-              
-  &.active{
-    box-shadow: inset 0px 2px 5px rgba(0,0,0,.5),
-                0px 3px 3px @box-shadow;
-    .gradi2(darken(@bgc,15%),darken(@bgc,5%));
-  }
 }
 
 .secColor (@bgc, @tcolor) when (@tcolor = white) {
@@ -265,6 +184,11 @@
 .secColor (@bgc, @tcolor) when (@tcolor = black) {
   .propSwitch (@bgc, #000, rgba(255,255,255,.5), 1px,rgba(0,0,0,.1));
 }
+.secColor-custom (@text,@bgc){
+  .propSwitch (@bgc, @text, rgba(0,0,0,.5), 1px, rgba(0,0,0,.2));
+}
+/*-----flat-----*/
+
 
 .btn-group(){
   margin: @pad2/2 0 0 0;
