--- a/css/style-base.less
+++ b/css/style-base.less
@@ -37,6 +37,56 @@ img{
 .pad{
   padding: @pad2;
 }
+.translate3d (@x, @y: 0, @z: 0) {
+	-webkit-transform:       translate3d(@x, @y, @z);
+	-moz-transform: 	 translate3d(@x, @y, @z);
+	-ms-transform: 		 translate3d(@x, @y, @z);
+	-o-transform: 		 translate3d(@x, @y, @z);
+}
+@slide-px: 15rem;
+#page {
+
+	overflow: hidden;
+	width: 100%;
+	position: relative;
+	#navigation {
+		position: absolute;
+		width: @slide-px;
+		display: block !important;
+		top: 0;
+		//left: -@slide-px;
+		z-index: 10;
+		.transitions(400ms,all);
+		height: 100%;
+	}
+	#content-wrapper {
+		position: relative;
+		z-index: 11;
+		left: 0;
+		.transitions(400ms,all);
+	}
+	&.opened {
+		#navigation {
+			background-color: @color-side;
+			left: 0;
+			//z-index: 12;
+		}
+		#content-wrapper {
+			.translate3d(@slide-px);
+		}
+		#side-menu::after {
+				position: absolute;
+				display: block;
+				left: 0;
+				top: 0;
+				right: 0;
+				bottom: 0;
+				z-index: 99999999999999999999999;
+				content: '';
+			
+		}
+	}
+}
 
 //   /$$$$$$$$                                                                   /$$                
 //  |__  $$__/                                                                  | $$                
