Removing compile error

--- a/css/project.less
+++ b/css/project.less
@@ -3,6 +3,7 @@
 @color-accent: #1B9CD8;
 @color-accent2: #237888;
 @color-btn: @color-accent2;
+@color-side: @color-back3;
 
 @color-border: rgba(0,0,0,.15);
 @color-border-w: rgba(255,255,255,.3);
