--- a/css/mixins.less
+++ b/css/mixins.less
@@ -1,3 +1,157 @@
+.radius(@radius){
+	-webkit-border-radius: @radius;
+		 -moz-border-radius: @radius;
+			border-radius: @radius;
+}
+.shadow(@shadow){
+	-webkit-box-shadow: @shadow;
+		 -moz-box-shadow: @shadow;
+			box-shadow: @shadow;
+}
+.background_icon(@url; @size: cover; @position: left top;) {
+	background-repeat: no-repeat;
+	background-size: @size;
+	background-position: @position;
+	background-image: url(@url);
+}
+.gradient(@c1,@c2){
+	background: @c1;
+	background: -moz-linear-gradient(top,	@c1 0%, @c2 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@c1), color-stop(100%,@c2));
+	background: -webkit-linear-gradient(top,	@c1 0%,@c2 100%);
+	background: -o-linear-gradient(top,	@c1 0%,@c2 100%);
+	background: -ms-linear-gradient(top,	@c1 0%,@c2 100%);
+	background: linear-gradient(to bottom,	@c1 0%,@c2 100%); 
+}
+.gradient_tripple(@c1: @grey2) {
+	background: lighten(@c1,5%); /* Old browsers */
+	background: -moz-linear-gradient(top,	lighten(@c1,5%) 0%, @c1 50%, darken(@c1,3%) 51%, @c1 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,lighten(@c1,5%)), color-stop(50%,@c1), color-stop(51%,darken(@c1,3%)), color-stop(100%,@c1)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,	lighten(@c1,5%) 0%,@c1 50%,darken(@c1,3%) 51%,@c1 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,	lighten(@c1,5%) 0%,@c1 50%,darken(@c1,3%) 51%,@c1 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,	lighten(@c1,5%) 0%,@c1 50%,darken(@c1,3%) 51%,@c1 100%); /* IE10+ */
+	background: linear-gradient(to bottom,	lighten(@c1,5%) 0%,@c1 50%,darken(@c1,3%) 51%,@c1 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='lighten(@c1,5%)', endColorstr='@c1',GradientType=0 ); /* IE6-9 */
+}
+.gradient-hor2(@c1,@c2){
+	background: @c2; /* Old browsers */
+	background: -moz-linear-gradient(left, @c1 0%, @c2 50%, @c1 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,@c1), color-stop(50%,@c2), color-stop(100%,@c1)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(left, @c1 0%,@c2 50%,@c1 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(left, @c1 0%,@c2 50%,@c1 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(left, @c1 0%,@c2 50%,@c1 100%); /* IE10+ */
+	background: linear-gradient(to right, @c1 0%,@c2 50%,@c1 100%); /* W3C */
+}
+.gradient-hor(@color1,@color2) {
+background: -moz-linear-gradient(left, @color1 0%, @color2 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,@color1), color-stop(100%,@color2)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(left, @color1 0%,@color2 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(left, @color1 0%,@color2 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(left, @color1 0%,@color2 100%); /* IE10+ */
+background: linear-gradient(to right, @color1 0%,@color2 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@color1', endColorstr='@color2',GradientType=1 ); /* IE6-9 */
+}
+.gradi2(@c1,@c2){
+	background: @c1;
+	background: -moz-linear-gradient(top,	@c1 0%, @c2 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@c1), color-stop(100%,@c2));
+	background: -webkit-linear-gradient(top,	@c1 0%,@c2 100%);
+	background: -o-linear-gradient(top,	@c1 0%,@c2 100%);
+	background: -ms-linear-gradient(top,	@c1 0%,@c2 100%);
+	background: linear-gradient(to bottom,	@c1 0%,@c2 100%); 
+}
+.gradi3(@c1,@c2,@c3){
+	background: @c2;
+	background: -moz-linear-gradient(top, @c1 0%, @c2 50%, @c3 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@c1), color-stop(50%,@c2), color-stop(100%,@c3));
+	background: -webkit-linear-gradient(top, @c1 0%,@c2 50%,@c3 100%);
+	background: -o-linear-gradient(top, @c1 0%,@c2 50%,@c3 100%);
+	background: -ms-linear-gradient(top, @c1 0%,@c2 50%,@c3 100%);
+	background: linear-gradient(to bottom, @c1 0%,@c2 50%,@c3 100%);
+}
+.gradi4(@c1,@c2,@c3,@c4){
+	background: @c1; 
+	background: -moz-linear-gradient(top,	@c1 0%, @c2 50%, @c3 51%, @c4 100%); 
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@c1), color-stop(50%,@c2), color-stop(51%,@c3), color-stop(100%,@c4)); 
+	background: -webkit-linear-gradient(top,	@c1 0%,@c2 50%,@c3 51%,@c4 100%); 
+	background: -o-linear-gradient(top,	@c1 0%,@c2 50%,@c3 51%,@c4 100%); 
+	background: -ms-linear-gradient(top,	@c1 0%,@c2 50%,@c3 51%,@c4 100%); 
+	background: linear-gradient(to bottom,	@c1 0%,@c2 50%,@c3 51%,@c4 100%);
+}
+.gradi-horizontal(@c1,@c2){
+	background: @c2; /* Old browsers */
+	background: -moz-linear-gradient(left, @c1 0%, @c2 50%, @c1 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,@c1), color-stop(50%,@c2), color-stop(100%,@c1)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(left, @c1 0%,@c2 50%,@c1 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(left, @c1 0%,@c2 50%,@c1 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(left, @c1 0%,@c2 50%,@c1 100%); /* IE10+ */
+	background: linear-gradient(to right, @c1 0%,@c2 50%,@c1 100%); /* W3C */
+}
+.unsel(){
+	-webkit-user-select: none; /* Chrome/Safari */				
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+ */
+	
+	/* Rules below not implemented in browsers yet */
+	-o-user-select: none;
+	user-select: none;
+}
+.cols(@num,@gap){
+	-moz-column-count:@num; /* Firefox */
+	-webkit-column-count:@num; /* Safari and Chrome */
+	column-count:@num;
+	
+	-moz-column-gap:@gap; /* Firefox */
+	-webkit-column-gap:@gap; /* Safari and Chrome */
+	column-gap:@gap;
+	
+	-webkit-column-break-inside:avoid;
+	-moz-column-break-inside:avoid;
+	-o-column-break-inside:avoid;
+	-ms-column-break-inside:avoid;
+	column-break-inside:avoid;
+}
+.transitions(@property: all; @time: 100ms; @delay: 0ms; @function: ease-in-out;){
+	-webkit-transition: @arguments;
+		 -moz-transition: @arguments;
+		-ms-transition: @arguments;
+		 -o-transition: @arguments;
+			transition: @arguments;
+}
+.transitions_off(){
+	-webkit-transition: none;
+		 -moz-transition: none;
+		-ms-transition: none;
+		 -o-transition: none;
+			transition: none;
+}
+.rotate(@degree) {
+	-webkit-transform: rotate(@degree); /* Chrome y Safari */
+		 -moz-transform: rotate(@degree); /* Firefox */
+		 -o-transform: rotate(@degree); /* Opera */
+			transform: rotate(@degree); /* Opera */
+}
+.origin(@left: 50%; @top: 50%) {
+	-webkit-transform-origin:@left @top; /* Safari and Chrome */		
+	-moz-transform-origin:@left @top; 
+	-ms-transform-origin:@left @top; /* IE 9 */
+	transform-origin:@left @top;
+}
+.scale(@scale: 0.95) {					
+	-webkit-transform: scale(@scale);
+	-moz-transform: scale(@scale);
+	-ms-transform: scale(@scale);
+	-o-transform: scale(@scale);
+	transform: scale(@scale);
+}
+.ellipsis() {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	-o-text-overflow: ellipsis;
+}
+
+
 
 .lborder(@color: @color-border) {border-left: @bpad solid @color;}
 .rborder(@color: @color-border) {border-right: @bpad solid @color;}
@@ -16,13 +170,11 @@
 .dashed(@color: lighten(@color-link,15%)) {
 	border-bottom: @bpad dashed @color;
 }
-
 .nolist(){
 	list-style: none !important;
 	margin: 0 !important;
 	padding: 0 !important;
 }
-
 .overflow-x() {
 	overflow-x: auto;
 	-webkit-overflow-scrolling: touch;
@@ -31,12 +183,10 @@
 	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
 }
-
 .overflow() {
 	overflow: auto;
 	-webkit-overflow-scrolling: touch;
 }
-
 
 .x-size-50() {
 	width: 100%;
@@ -84,33 +234,6 @@
 		&:nth-child(2n+1) {	padding: @size;	padding-right:@size/2;	}
 	}
 }
-
-.chevronlist() {
-	a {
-		display: block;
-		text-align: left;
-		padding: @pad2;
-		padding-right: @pad*3;
-		text-decoration: none;
-		position: relative;
-		.bborder;
-		&:after {
-			.icon-chevron-right;
-			top: 50%;
-			margin-top: -@pad;
-			position: absolute;
-			right: @pad*2;
-		}
-	}
-	> li:last-of-type {
-		a {
-			.no-bborder;
-		}
-	}
-}
-
-
-
 
 @font-face {
   font-family: 'ALSRubl-Tahoma';
@@ -209,13 +332,6 @@
     content: '';
     display: inline-block;
   }
-}
-
-.ellipsis() {
-  white-space: nowrap;
-  overflow: hidden;
- -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
 }
 
 .tableToBlocks() {
@@ -328,6 +444,7 @@
         margin-top: -@pad;
         margin-right: @size;
         .icon-chevron-right();
+        color: @color-accent;
       }
       
       &:hover, &:active {
@@ -345,21 +462,198 @@
   }
   
   &.flat{
-    .radius(0);
-    li{
-      a{
-        .radius(0);
-        .no-border;
-      	.bborder;
-      }
-      &:last-child a{
-        .no-border;
-      }
-    }
+    .no-border;
+    li a{.radius(0) !important;}
   }
   &.noshadow{
     box-shadow: none;
   }
 }
 
+
+/*BUTTONS*/
+.btn{
+  .btn-theme();
+}
+/*Параметры для кнопок*/
+.full{
+  width: 100%;
+}
+.circle(@size: @pad*4, @color: @color-accent) {
+  height: @size;
+  line-height: @size;
+  background: @color;
+  width: @size;
+  padding: 0;
+  font-size: @size/2;
+  color: darken(@color,15%);
+  text-shadow: @bpad @bpad @bpad lighten(@color,15%);
+  .bold;
+  .no-border;
+  box-shadow: inset 0 0 @bpad @bpad @color-border;
+  text-align: center;
+  .radius(50%);
+}
+.label(@color: @color-accent) {
+  text-shadow: @bpad @bpad @bpad @color-back;
+  .gradient(lighten(@color,15%),@color);
+  display: inline-block;
+  padding: @pad/2 @pad2;
+  position: relative;
+  text-decoration: none;
+  z-index: 9;
+  margin-left: @pad/2;
+  box-shadow: @bpad @bpad @bpad @color-border;
+}
+.nick(@color: @color-txt) {
+  .icon-caret-left;
+  position: absolute;
+  text-shadow: none;
+  bottom: -@pad*1.75;
+  .xxxlarge;
+  color: @color;
+  z-index: 0;
+}
+.tag() { // Надо обновить
+  display: inline-block;
+  padding: @pad/2 @pad2;
+  margin: @pad2/2 @pad2/4;
+  text-decoration: none;
+  background: @color-back3;
+  font-size: @tiny;
+  color: @color-txt3;
+  .radius(@bpad*2);
+  &.active {
+    color: @color-link;
+    background-color: @color-back2;
+  }
+}
+
+
+.btn-theme(){
+  .createButton (@color-link,white);
+}
+.btn-white(){
+  .createButton (#eee,black);
+}
+.btn-grey(){
+  .createButton (#999,black);
+}
+.btn-black(){
+  .createButton (#333,white);
+}
+.btn-red(){
+  .createButton (red,white);
+}
+.btn-orange(){
+  .createButton (#ff7e00,black);
+}
+.btn-yellow(){
+  .createButton (#ffde00,black);
+}
+.btn-blue(){
+  .createButton (blue,white);
+}
+.btn-green(){
+  .createButton (#1fa01e,white);
+}
+.btn-lime(){
+  .createButton (#6ada10,black);
+}
+.btn-pink(){
+  .createButton (#ff00a8,white);
+}
+.btn-violet(){
+  .createButton (#7e00ff,white);
+}
+
+/*button mixin*/
+.buttonStyle (@bgc, @txt-color, @clr, @px, @box-shadow){
+  .unsel();
+  .radius(@pad);
+  .ellipsis;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  
+  display: inline-block;
+  
+  margin: @pad/2 0;
+  padding: @pad*1.3;
+  
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  letter-spacing: 0px;
+  cursor: pointer;
+  line-height: 100%;
+  
+  color: @txt-color;
+  text-shadow: 0 @px 0 @clr;
+  border: 1px solid rgba(0, 0, 0, .3);
+  
+  .gradi3(darken(@bgc,-20%),@bgc,darken(@bgc,5%));  
+  /* use it for flat style */
+  /*background: @bgc;*/
+  
+  /*remove if flat*/
+  box-shadow: 0px 3px 3px @box-shadow,
+              inset 0px 1px 0px rgba(255,255,255,.6);
+              
+  &:active,&.active{
+    .gradi2(darken(@bgc,20%),darken(@bgc,5%));
+    box-shadow: 0px 3px 3px @box-shadow,
+                inset 0px 3px 5px 0px rgba(0,0,0,.2);
+  }
+}
+
+.createButton (@bgc, @tcolor) when (@tcolor = white) {
+  .buttonStyle (@bgc, #fff, rgba(0,0,0,.5), 1px, rgba(0,0,0,.2));
+}
+.createButton (@bgc, @tcolor) when (@tcolor = black) {
+  .buttonStyle (@bgc, #000, rgba(255,255,255,.5), 1px,rgba(0,0,0,.1));
+}
+.createButton-custom (@text,@bgc){
+  .buttonStyle (@bgc, @text, rgba(0,0,0,.5), 1px, rgba(0,0,0,.2));
+}
+/*-----flat-----*/
+
+
+.btn-group(){
+  margin: @pad2/2 0 0 0;
+  text-align: center;
+  
+  .inside{
+    display: table;
+    margin: 0 auto;
+  }
+  .btn{
+    float: left;
+    margin: 0 !important;
+    width: auto !important;
+
+    padding: @pad2/2.2 @pad2*1.6;
+
+
+    &:not(:last-child){
+    }
+    
+    &:first-child{
+     .radius(@pad*2 0 0 @pad*2);
+    }
+    &:last-child{
+     .radius(0 @pad*2 @pad*2 0);
+      border-right: 0;
+    }
+    &.active{
+    } 
+  }
+  .view-group{
+    margin-top: @pad;
+  
+    .view{
+      display: none;
+    }
+  }
+}
 
